--- a/common.css
+++ b/common.css
@@ -1,3 +1,28 @@
+body {
+    animation: fadeIn 1s ease;
+    -webkit-animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
 input {
     width: 95%;
 }
