deploy: 57ca3fa7914e74560592e0b6eb76031738ebc106

--- a/common.css
+++ b/common.css
@@ -1,6 +1,6 @@
 body {
-    animation: fadeIn 1s ease;
-    -webkit-animation: fadeIn 1s ease;
+    animation: fadeIn 1s ease-in;
+    -webkit-animation: fadeIn 1s ease-in;
 }
 
 @keyframes fadeIn {
